<?xml version="1.0"?>
<package>
  <name>start_capture</name>
  <version>0.0.0</version>
  <description>The start_capture package </description>
  <maintainer email="bkrumme@ethz.ch">Benjamin Krummenacher</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>message_generation</run_depend>


</package>